fixed horizontal scroll on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -1157,16 +1157,17 @@ body.dark-theme .photo-counter {
 
 @media screen and (max-width: 480px) {
   .photo-item {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     padding: 5px;
     display: flex;
     align-items: center;
     justify-content: center;
+    box-sizing: border-box;
   }
 
   .photo-item img {
-    max-width: calc(100vw - 16px); /* Account for padding and border */
+    max-width: calc(100% - 16px); /* Account for padding and border */
     max-height: calc(100vh - 16px);
     width: auto;
     height: auto;
